<resources>
    <string name="app_name">EuropeWelcome</string>
    <string name="app_email" translatable="false">EuropeWelcome@gmail.com</string>
    <string name="app_creator" translatable="false">Created by: Baltic Information Technologies for EuropeWelcome app</string>
    <string name="app_version" translatable="false">(Version code)</string>
    <string name="facebook_app_id">1997719713823775</string>
    <string name="fb_login_protocol_scheme">fb1997719713823775</string>
    <string name="email_subject">Suggestion to improve App</string>
    <string name="email_body">Enter your message here</string>
    <string name="email_chooser_title">Send Email</string>
    <string name="login_empty_email">Please enter your Email</string>
    <string name="login_invalid_email">Please enter a valid Email</string>
    <string name="login_empty_password">Please enter your Password</string>
    <string name="login_email_not_exist">Provided Email is not registered</string>
    <string name="login_invalid_password">The Password is invalid</string>
    <string name="login_email_already_used">Email address is already used</string>
    <string name="login_try_again">Please try again</string>
    <string name="login_some_error">Some error occurred. Try again</string>
    <string name="register_empty_email">Please enter your Email</string>
    <string name="register_invalid_email">Please enter a valid Email</string>
    <string name="register_empty_password">Please enter your Password</string>
    <string name="register_short_password">Please enter at lest 6 characters Password</string>
    <string name="register_no_photo">Please add your Photo</string>
    <string name="register_empty_name">Please enter your Name</string>
    <string name="register_short_name">Please enter at lest 2 characters Name</string>
    <string name="register_empty_surname">Please enter your Surname</string>
    <string name="register_short_surname">Please enter at lest 2 characters Surname</string>
    <string name="register_empty_birth_date">Please enter your Date of Birth</string>
    <string name="register_upload_error">Upload failed. Please try again</string>
    <string name="register_email_already_used">Email address is already used</string>
    <string name="register_try_again">Please try again</string>
    <string name="register_some_error">Some error occurred. Try again</string>
    <string name="bookmarks_remove_bookmark">Are you sure to remove Bookmark?</string>
    <string name="bookmarks_remove_all_bookmarks">Are you sure to remove all Bookmarks?</string>
    <string name="bookmarks_remove">Remove</string>
    <string name="bookmarks_cancel">Cancel</string>
    <string name="bookmarks_removed">Bookmark removed</string>
    <string name="bookmarks_some_error">Some error occurred. Try again</string>
    <string name="drafts_delete_draft">Are you sure to Delete this Draft?</string>
    <string name="drafts_delete_all_drafts">Are you sure to Delete all Drafts?</string>
    <string name="drafts_delete">Delete</string>
    <string name="drafts_cancel">Cancel</string>
    <string name="drafts_deleted">Draft deleted</string>
    <string name="drafts_some_error">Some error occurred. Try again</string>
    <string name="newpost_save_to_draft">Save Post to Draft?</string>
    <string name="newpost_save">Save</string>
    <string name="newpost_delete">Delete</string>
    <string name="newpost_add_title">Please enter Post Title</string>
    <string name="newpost_add_text">Please add Text</string>
    <string name="newpost_add_image">Please add Image</string>
    <string name="post_detail_some_error">Some error occurred. Try again</string>
    <string name="post_detail_star_removed">Star removed</string>
    <string name="post_detail_star_rated">Star rated</string>
    <string name="post_detail_bookmark_removed">Bookmark removed</string>
    <string name="post_detail_bookmark_saved">Bookmark saved</string>
    <string name="post_detail_comment_saved">Comment saved</string>
    <string name="post_detail_login_to_rate">Please login to rate Post</string>
    <string name="post_detail_login_to_bookmark">Please login to bookmark Post</string>
    <string name="post_detail_login_to_comment">Please login to comment Post</string>
    <string name="post_detail_login_to_like_comment">Please login to like Comment</string>
    <string name="posts_free_posts">Posts</string>
    <string name="posts_premium_posts">Premium</string>
    <string name="posts_some_error">Some error occurred. Try again</string>
    <string name="posts_verification_failed">Error purchasing. Authenticity verification failed.</string>
    <string name="posts_thanks_for_premium">Thank you for upgrading to premium!</string>
    <string name="posts_press_again_to_exit">Please click BACK again to exit</string>
    <string name="free_posts_some_error">Some error occurred. Try again</string>
    <string name="free_posts_login_to_rate">Please login to rate Post</string>
    <string name="free_posts_login_to_bookmark">Please login to bookmark Post</string>
    <string name="free_posts_bookmark_saved">Bookmark saved</string>
    <string name="free_posts_bookmark_removed">Bookmark removed</string>
    <string name="rating_not_provided_error">Please provide us stars</string>
    <string name="rating_thanks">Thank you for your feedback</string>
    <string name="premium_email_subject">Message to EuropeWelcome Assistance stuff</string>
    <string name="profile_user_posts">User Posts</string>
    <string name="profile_user_comments">User Comments</string>
    <string name="profile_some_error">Some error occurred. Try again</string>
    <string name="activity_login_app_logo">EuropeWelcome</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_signin">Sign In</string>
    <string name="activity_login_google_signin">Sign In with Google</string>
    <string name="activity_login_facebook_signin">Sign In with Facebook</string>
    <string name="activity_login_register">Don\'t have an Account? Register</string>
    <string name="fragment_register_register_screen">Register</string>
    <string name="fragment_register_back_btn">Back</string>
    <string name="fragment_register_email">Email</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_add_photo">Add Photo</string>
    <string name="fragment_register_name">Name</string>
    <string name="fragment_register_surname">Surname</string>
    <string name="fragment_register_gender">Your gender:</string>
    <string name="fragment_register_male">Male</string>
    <string name="fragment_register_female">Female</string>
    <string name="fragment_register_not_specified">Not specified</string>
    <string name="fragment_register_date_of_birth">Date of Birth:</string>
    <string name="fragment_register_d_m_y">Day Month Year</string>
    <string name="fragment_register_terms">Proceeding register you agree with <b>Terms of Service</b></string>
    <string name="fragment_register_register">Register</string>
    <string name="drawer_header_bg_image">Background image</string>
    <string name="drawer_header_user_photo">User photo</string>
    <string name="drawer_header_user_name">EuropeWelcome</string>
    <string name="drawer_header_user_email">I am the way and the truth and the life</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="drawer_menu_bookmarks">Bookmarks</string>
    <string name="drawer_menu_drafts">Drafts</string>
    <string name="drawer_menu_premium">Premium</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_rate">Rate Us</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_sign_in">Sign In</string>
    <string name="post_item_author_photo">Post author photo</string>
    <string name="post_item_author_name">Post author name</string>
    <string name="post_item_post_date">Post date</string>
    <string name="post_item_post_image">Post image</string>
    <string name="post_item_post_title">Post title</string>
    <string name="post_item_post_text">Post text</string>
    <string name="post_item_star_icon">Star icon</string>
    <string name="post_item_eye_icon">Eye icon</string>
    <string name="post_item_comment_icon">Comment icon</string>
    <string name="post_item_bookmark_icon">Bookmark icon</string>
    <string name="post_item_default_count">0</string>
    <string name="post_item_draft_edit">Edit Draft icon</string>
    <string name="comment_item_user_image">User image</string>
    <string name="comment_item_star_icon">Star icon</string>
    <string name="activity_new_post_publish">Publish</string>
    <string name="activity_new_post_type_title">Type post title here</string>
    <string name="activity_new_post_add_text_icon">Add text icon</string>
    <string name="activity_new_post_add_image_icon">Add image icon</string>
    <string name="activity_new_post_add_map_icon">Add map icon</string>
    <string name="activity_new_post_add_video_icon">Add video icon</string>
    <string name="new_post_item_format_bold_icon">Format bold icon</string>
    <string name="new_post_item_format_italic_icon">Format italic icon</string>
    <string name="new_post_item_format_size_icon">Format size icon</string>
    <string name="new_post_item_delete_icon">Delete icon</string>
    <string name="new_post_item_youtube_icon">Youtube icon</string>
    <string name="new_post_item_type_text">Type your text here</string>
    <string name="new_post_item_post_image">Post image</string>
    <string name="dialog_buy_premium_title">Premium gives you:</string>
    <string name="dialog_buy_premium_number_one_icon">Number one icon</string>
    <string name="dialog_buy_premium_number_two_icon">Number two icon</string>
    <string name="dialog_buy_premium_number_three_icon">Number three icon</string>
    <string name="dialog_buy_premium_text_one">Access to premium posts</string>
    <string name="dialog_buy_premium_text_two">Asylum seeker apply form</string>
    <string name="dialog_buy_premium_text_three">Email personal assistance</string>
    <string name="dialog_buy_premium_get_premium">Get Premium</string>
    <string name="dialog_buy_premium_apply_terms">Proceeding you apply to Terms of Service</string>
    <string name="rating_rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others to know about this app</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="activity_premium_premium_text">Premium</string>
    <string name="activity_premium_title_one">Asylum seeker apply form:</string>
    <string name="activity_premium_text_one">
        \tPlease notice, your form may be send to the official European institutions, answer all required questions correctly and honestly. Any inconveniences can lead to refugee application failure. Proceeding you confirm, that you are one and only person responsible for provided information.
    </string>
    <string name="activity_premium_text_two">
        \tAfter form submission our team carefully review it and response for future steps.
    </string>
    <string name="activity_premium_title_two">Personal assistance:</string>
    <string name="activity_premium_text_three">
        \tAsk our international team questions related to asylum seeking in Europe. Please write all details about you current status. If your life is in a danger, immediately provide us a note. Our goal is to help you.
    </string>
    <string name="activity_premium_document_icon">Document icon</string>
    <string name="activity_premium_mail_icon">Mail icon</string>
</resources>