<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Baltic Information Technologies
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_profile"
            android:icon="@drawable/ic_circle_account_white_24dp"
            android:title="@string/drawer_menu_profile" />
        <item
            android:id="@+id/nav_item_bookmarks"
            android:icon="@drawable/ic_circle_bookmark_white_24px"
            android:title="@string/drawer_menu_bookmarks" />
        <item
            android:id="@+id/nav_item_drafts"
            android:icon="@drawable/ic_circle_draft_white_24px"
            android:title="@string/drawer_menu_drafts" />
    </group>
    <group
        android:id="@+id/menu_premium"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_premium"
            android:icon="@drawable/ic_star_white_24px"
            android:title="@string/drawer_menu_premium" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_circle_about_white_24px"
            android:title="@string/drawer_menu_about" />
        <item
            android:id="@+id/nav_item_rate_us"
            android:icon="@drawable/ic_circle_rate_white_24px"
            android:title="@string/drawer_menu_rate" />
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_circle_logout_white_24px"
            android:title="@string/drawer_menu_logout" />
    </group>
</menu>