<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Baltic Information Technologies
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_post_item_author_photo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/post_item_author_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_circle_account_white_24dp" />

        <TextView
            android:id="@+id/tv_post_item_author_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:text="@string/post_item_author_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_post_item_author_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_post_item_post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            android:text="@string/post_item_post_date"
            android:textSize="14sp"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toEndOf="@+id/iv_post_item_author_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_item_author_name" />

        <ImageView
            android:id="@+id/iv_post_item_post_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/post_item_post_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_post_item_author_photo" />

        <TextView
            android:id="@+id/tv_post_item_post_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/post_item_post_title"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_post_item_post_image" />

        <TextView
            android:id="@+id/tv_post_item_post_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/post_item_post_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_item_post_title" />

        <View
            android:id="@+id/sprt_post_item_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_post_item_post_text" />

        <ImageView
            android:id="@+id/iv_post_item_star_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/post_item_star_icon"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sprt_post_item_separator"
            app:srcCompat="@drawable/ic_border_star_blue_24px" />

        <TextView
            android:id="@+id/tv_post_item_stars_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/post_item_default_count"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toEndOf="@+id/iv_post_item_star_image"
            app:layout_constraintTop_toBottomOf="@+id/sprt_post_item_separator" />

        <ImageView
            android:id="@+id/iv_post_item_eye_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/post_item_eye_icon"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_post_item_stars_count"
            app:layout_constraintTop_toBottomOf="@+id/sprt_post_item_separator"
            app:srcCompat="@drawable/ic_border_eye_blue_24px" />

        <TextView
            android:id="@+id/tv_post_item_eye_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/post_item_default_count"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toEndOf="@+id/iv_post_item_eye_image"
            app:layout_constraintTop_toBottomOf="@+id/sprt_post_item_separator" />

        <ImageView
            android:id="@+id/iv_post_item_comment_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/post_item_comment_icon"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_post_item_eye_count"
            app:layout_constraintTop_toBottomOf="@+id/sprt_post_item_separator"
            app:srcCompat="@drawable/ic_border_comment_blue_24px" />

        <TextView
            android:id="@+id/tv_post_item_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/post_item_default_count"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toEndOf="@+id/iv_post_item_comment_image"
            app:layout_constraintTop_toBottomOf="@+id/sprt_post_item_separator" />

        <ImageView
            android:id="@+id/iv_post_item_bookmark_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/post_item_bookmark_icon"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sprt_post_item_separator"
            app:srcCompat="@drawable/ic_border_bookmark_blue_24px" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>